# apps/api/openapi.json
@@ -13,6 +13,18 @@
         "tags": ["health"]
       }
     },
+    "/v1/health/ready": {
+      "get": {
+        "operationId": "HealthController_ready",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "tags": ["health"]
+      }
+    },
     "/v1/auth/device": {
       "post": {
         "operationId": "AuthController_device",
